# atividade_engsoft

./: .gitignore  README.md  coverage.xml  pyproject.md  pyproject.toml
.github/workflows/: README.md  ci.yaml  test.yaml
src/python_pdm_template/: README.md  __init__.py  __main__.py  utils.py
tests/: README.md  __init__.py  conftest.py  test_utils.py
